--- a/package.json
+++ b/package.json
@@ -21,18 +21,12 @@
     "@chimpwizards/wand": "@chimpwizards/wand"
   },
   "dependencies": {
-    "boxen": "^4.2.0",
     "chalk": "^4.0.0",
-    "clear": "^0.1.0",
     "debug": "^4.1.1",
-    "figlet": "^1.4.0",
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.15",
-    "reflect-metadata": "^0.1.13",
-    "yargs": "^15.3.1"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@chimpwizards/wand": "^1.0.8",
+    "@chimpwizards/wand": "^1.0.17",
     "@types/clear": "^0.1.0",
     "@types/debug": "^4.1.5",
     "@types/figlet": "^1.2.0",
